--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,7 @@ services:
     environment:
       - WAHA_API_URL=http://localhost:3200
       - WAHA_API_KEY=sha512:d4273065fd5d79963463cae272d31277c88b5c510c23460c5c31d72ea95705008bcb4ba25fb229d3e516714bbef2b902df03d43695f33a88f973664763677ca3
+      - WAHA_DASHBOARD_USERNAME=admin
+      - WAHA_DASHBOARD_PASSWORD=11111
       - NODE_ENV=production
     restart: unless-stopped
