--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,14 @@ version: '3.8'
 
 services:
   whaha-server:
-    image: devlikeapro/waha
+    image: devlikeapro/waha:arm-2025.10.1
     container_name: whaha-server
     ports:
       - "3200:3000"  # Маппинг порта 3200 хоста на порт 3000 контейнера
     environment:
       - WAHA_API_URL=http://localhost:3200
       - WAHA_API_KEY=sha512:d4273065fd5d79963463cae272d31277c88b5c510c23460c5c31d72ea95705008bcb4ba25fb229d3e516714bbef2b902df03d43695f33a88f973664763677ca3
+      - WAHA_API_TOKEN=0C85DAAA24374C408D0143B375233B6F
       - WAHA_DASHBOARD_USERNAME=admin
       - WAHA_DASHBOARD_PASSWORD=11111
       - NODE_ENV=production
